js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/simpleChild.0.6.kt
class SimpleChild : Class() {
    fun simpleMethod(): String {
        return "${CONST_VALUE}"
    }
}
